<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color">

    <ImageView
        android:id="@+id/imageViewPrivacyToHome"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color" />

    <TextView
        android:id="@+id/textViewPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/help_center"
        android:textColor="@color/primary_textview_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPrivacyToHome"
        app:layout_constraintStart_toEndOf="@+id/imageViewPrivacyToHome"
        app:layout_constraintTop_toTopOf="@+id/imageViewPrivacyToHome" />

    <TextView
        android:id="@+id/data_types_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/types_of_data_we_collect"
        android:textColor="@color/primary_textview_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPrivacy" />

    <TextView
        android:id="@+id/data_types_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/privacy_lorem"
        android:textColor="@color/privacy_textview_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_types_title" />

    <TextView
        android:id="@+id/use_of_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/use_of_your_personal_data"
        android:textColor="@color/primary_textview_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data_types_content" />

    <TextView
        android:id="@+id/use_of_data_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/privacy_lorem"
        android:textColor="@color/privacy_textview_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use_of_data_title" />

    <TextView
        android:id="@+id/disclosure_of_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/disclosure_of_your_personal_data"
        android:textColor="@color/primary_textview_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use_of_data_content" />

    <TextView
        android:id="@+id/disclosure_of_data_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/privacy_lorem"
        android:textColor="@color/privacy_textview_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disclosure_of_data_title" />

</androidx.constraintlayout.widget.ConstraintLayout>