<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color"
    tools:context=".presentation.ui.details.auth.profile.help.HelpFragment">

    <ImageView
        android:id="@+id/imageViewHelpToHome"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color" />

    <TextView
        android:id="@+id/textViewHelpCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/help_center"
        android:textColor="@color/primary_textview_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHelpToHome"
        app:layout_constraintStart_toEndOf="@+id/imageViewHelpToHome"
        app:layout_constraintTop_toTopOf="@+id/imageViewHelpToHome" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/group3"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHelpCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewHelpCenter" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/helpTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHelpCenter"
        app:tabIndicatorColor="@color/red"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="@color/red">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/helpViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpTabLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>